// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`web installer (default github) 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "TestApp-WebSetup-1.1.0.exe",
        "packages": Object {
          "ia32": Object {
            "path": "TestApp-1.1.0-ia32.nsis.7z",
          },
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "url": "Test App ßW Web Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "ia32": Object {
            "path": "TestApp-1.1.0-ia32.nsis.7z",
          },
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
      },
    },
    Object {
      "arch": "ia32",
      "file": "TestApp-1.1.0-ia32.nsis.7z",
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
        "path": "Test App ßW Web Setup 1.1.0.exe",
        "url": "Test App ßW Web Setup 1.1.0.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW Web Setup 1.1.0.exe",
      "safeArtifactName": "TestApp-WebSetup-1.1.0.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
  ],
}
`;

exports[`web installer, safe name on github 1`] = `
Object {
  "win": Array [
    Object {
      "file": "latest.yml",
      "fileContent": Object {
        "githubArtifactName": "WorkFlowy.exe",
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
        "path": "WorkFlowy.exe",
        "url": "WorkFlowy.exe",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-x64.nsis.7z",
    },
    Object {
      "arch": "x64",
      "file": "WorkFlowy.exe",
      "safeArtifactName": "WorkFlowy.exe",
      "updateInfo": Object {
        "packages": Object {
          "x64": Object {
            "path": "TestApp-1.1.0-x64.nsis.7z",
          },
        },
      },
    },
  ],
}
`;
